objects/User.object
<CustomObject>
    <fields>
        <fullName>BU_Role__c</fullName>
        <label>BU Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal user</fullName>
                </value>
                <value>
                    <fullName>Secondary contact</fullName>
                </value>
                <value>
                    <fullName>Key user</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balanced_Pipeline_Objective__c</fullName>
        <label>Balanced Pipeline Objective</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_Department__c</fullName>
        <description>Field standarize the entries for Department and used for Validation rules for Germany Sales Department (Vertrieb) on tasks.</description>
        <formula>IF( AND( TEXT(sf42_Business_Unit__c) = &quot;Germany - CM&quot;,OR( Department = &quot;Dom. Sales&quot;,Department = &quot;Sales&quot;,Department = &quot;Sales Support &amp; After Sales&quot;,Department = &quot;Sales Assistant&quot;))  , &quot;Sales&quot;, &quot;Other&quot;)</formula>
        <label>DE Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Name_for_filters__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <label>Full Name for filters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_RIS_GDP_Territory__c</fullName>
        <label>RIS GDP Territory</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NA_Territory_Owner__c</fullName>
        <description>Values specification: 
1. Name of the Company - for Reps 
2. Prefix &quot;US&quot;+ Name of The Employee for employee having territory assigned USA
3. Prefix &quot;CA&quot;+ Name of The Employee for employee having territory assigned Canada
4. PT Office USA - for Employees without territory 
5. PT Office Canada - for Employees without territory</description>
        <label>Territory Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced Mechanical Enterprises Inc.</fullName>
                </value>
                <value>
                    <fullName>Alignment and Condition Monitoring Service</fullName>
                </value>
                <value>
                    <fullName>CA Jean-Francois Brisson</fullName>
                </value>
                <value>
                    <fullName>CA Jean-Marc Bourgeois</fullName>
                </value>
                <value>
                    <fullName>CA Payam Assadi</fullName>
                </value>
                <value>
                    <fullName>CA Ron Newman</fullName>
                </value>
                <value>
                    <fullName>CA Tom Burke</fullName>
                </value>
                <value>
                    <fullName>Centerline, Inc.</fullName>
                </value>
                <value>
                    <fullName>Dominion Mexico</fullName>
                </value>
                <value>
                    <fullName>DVA Industrial Solutions Inc.</fullName>
                </value>
                <value>
                    <fullName>Flatla Industrial Sales</fullName>
                </value>
                <value>
                    <fullName>H &amp; H Engineering &amp; Supply Co</fullName>
                </value>
                <value>
                    <fullName>Heartland Industrial Solutions LLC</fullName>
                </value>
                <value>
                    <fullName>Jeffcote Industrial Sales Co., Inc.</fullName>
                </value>
                <value>
                    <fullName>KVR Energy Limited</fullName>
                </value>
                <value>
                    <fullName>L &amp; V Diagnostics, Inc.</fullName>
                </value>
                <value>
                    <fullName>LazerTech, LLC</fullName>
                </value>
                <value>
                    <fullName>Machine Development Technologies</fullName>
                </value>
                <value>
                    <fullName>N Line Industrial Sales, Inc.</fullName>
                </value>
                <value>
                    <fullName>Pinnacle Services Inc.</fullName>
                </value>
                <value>
                    <fullName>PMC Inc., Preventive Maintenance Concepts, Inc</fullName>
                </value>
                <value>
                    <fullName>PM Technology</fullName>
                </value>
                <value>
                    <fullName>PT Office Canada</fullName>
                </value>
                <value>
                    <fullName>PT Office USA</fullName>
                </value>
                <value>
                    <fullName>Sable-Engineering</fullName>
                </value>
                <value>
                    <fullName>Shoreline Reliability</fullName>
                </value>
                <value>
                    <fullName>Solute - LLC</fullName>
                </value>
                <value>
                    <fullName>Star-Tech Instrument System, Inc.</fullName>
                </value>
                <value>
                    <fullName>Tern Technologies Inc.</fullName>
                </value>
                <value>
                    <fullName>US Brad Illing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Yearly Quota - gets manually updated for reporting purposes only</description>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Cycle_Months__c</fullName>
        <label>Sell Cycle Months</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <description>Skype login.</description>
        <inlineHelpText>Skype login.</inlineHelpText>
        <label>Skype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_BU_short_name__c</fullName>
        <formula>CASE(sf42_Business_Unit__c ,
&quot;Administration&quot;, &quot;ADM&quot;,
&quot;Belgium&quot;, &quot;BE&quot;,
&quot;Brazil&quot;, &quot;BR&quot;,
&quot;North America&quot;, &quot;NA&quot;,
&quot;China&quot;, &quot;CN&quot;,
&quot;Dubai&quot;, &quot;DU&quot;,
&quot;France&quot;, &quot;FR&quot;,
&quot;Germany - ALI&quot;, &quot;DEALI&quot;,
&quot;Germany - CM&quot;, &quot;DECM&quot;,
&quot;Germany - Headquarters&quot;, &quot;DEHQ&quot;,
&quot;Germany - NDT&quot;, &quot;DENDT&quot;,
&quot;International&quot;, &quot;INT&quot;,
&quot;International ALI&quot;, &quot;INTALI&quot;,
&quot;International CM&quot;, &quot;INTCM&quot;,
&quot;Italy&quot;, &quot;IT&quot;,
&quot;Japan&quot;, &quot;JP&quot;,
&quot;Poland Technology&quot;, &quot;PTT&quot;,
&quot;Poland Wibrem&quot;, &quot;PTW&quot;,
&quot;Russia&quot;, &quot;RU&quot;,
&quot;Singapore&quot;, &quot;SG&quot;,
&quot;Spain&quot;, &quot;ES&quot;,
&quot;Turkey&quot;, &quot;TR&quot;,
&quot;UK&quot;, &quot;UK&quot;,
&quot;&quot;)</formula>
        <label>BU short name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Partner_Contact_Name__c</fullName>
        <formula>HYPERLINK(&quot;https://pruftechnik.my.salesforce.com/&quot;&amp; ContactId , Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName )</formula>
        <label>Partner Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Dubai</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany - CM</fullName>
                </value>
                <value>
                    <fullName>Germany - Headquarters</fullName>
                </value>
                <value>
                    <fullName>Germany - NDT</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Poland Technology</fullName>
                </value>
                <value>
                    <fullName>Poland Wibrem</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_OLD_ID__c</fullName>
        <externalId>true</externalId>
        <label>TEMP OLD ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_de_Notes_Email__c</fullName>
        <label>Notes Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_First_Name_JP__c</fullName>
        <label>First Name Lokal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Name_JP__c</fullName>
        <label>Name Lokal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Mandatory_Address</fullName>
        <active>true</active>
        <description>C-00008553 https://pruftechnik.my.salesforce.com/500D000000VTcfh</description>
        <errorConditionFormula>Street = &apos;&apos; || City = &apos;&apos; || Country = &apos;&apos; || PostalCode = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Please fill in all address details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Phone</fullName>
        <active>true</active>
        <description>C-00008553 https://pruftechnik.my.salesforce.com/500D000000VTcfh</description>
        <errorConditionFormula>Phone = &apos;&apos;</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone can not be empty.</errorMessage>
    </validationRules>
</CustomObject>